AdFixed alignment issues to display correctly on other devices.

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,7 @@ body,
   justify-content: center;
   overflow: hidden;
   white-space: pre-wrap;
-  background-size: cover;
-  background: url("./assets/gray-blur.jpg") no-repeat;
+  background: url("./assets/gray-blur.jpg") center center / cover no-repeat;
   font-size: 100%;
   font-family:
     -apple-system,
@@ -68,7 +67,7 @@ a:active {
   padding: 0;
   position: absolute;
   display: grid;
-  grid-template: 5% 66% 27% / 35% 30% 15% 20%;
+  grid-template: 6% 66% 27% / 35% 30% 15% 20%;
   z-index: 1;
 }
 
@@ -78,7 +77,7 @@ a:active {
     border: solid 2px blue;
 */
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   grid-row-start: 1;
   grid-row-end: 2;
@@ -100,24 +99,22 @@ a:active {
 /*
     border: solid 2px green;
 */
+  width: 100%;
+  height: 100%;
   display: flex;
-  align-items: flex-start;;
+  align-items: center;
   justify-content: center;
   grid-row-start: 1;
   grid-row-end: 2;
   grid-column-start: 4;
   grid-column-end: 5;
-}
-
-.navbar-main {
-  display: flex;
   z-index: 3;
-  background: rgba(227, 228, 230, 0.05);
 }
 
 .navbar-element {
   width: 100%;
   height: 100%;
+  display: flex;
   filter: drop-shadow(-1px -1px 3px rgba(255,255,255, 0.5));
 }
 
@@ -157,7 +154,7 @@ a:active {
   padding-top: 10px;
   display: flex;
   align-items: flex-start;
-  justify-content: flex-end;
+  justify-content: center;
   grid-row-start: 3;
   grid-row-end: 4;
   grid-column-start: 1;
@@ -165,7 +162,7 @@ a:active {
   z-index: 3;
 }
 
-.carousel-icon-container {
+.carousel-icon {
   position: relative;
   width: 100%;
   height: 10vw;
@@ -175,6 +172,21 @@ a:active {
   background-color: rgba(169, 173, 182, 0.8);
 }
 
+.folder-svg {
+  width: 90%;
+  height: 90%;
+  left: 4.5%;
+  top: 5%;
+}
+
+.empty-svg {
+  width: 100%;
+  height: 100%;
+  right: 0.5%;
+  top: 1%;
+  stroke: rgba(227,228,230, 0.8);
+  stroke-width: 8;
+}
 
 .icon-caption {
   padding-top: 5px;
@@ -189,6 +201,7 @@ a:active {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-style: italic;
 }
 
 .intern-icon {
@@ -196,7 +209,7 @@ a:active {
   height: 100%;
   background: url("./assets/intern-icon.png")
               no-repeat
-              10px 43px / 80% 55%;
+              center 60% / 50% 35%;
 }
 
 /************************************ Home ***************^^*******************/
@@ -239,7 +252,7 @@ a:active {
   opacity: 0.4;
   background: rgba(227, 228, 230, 1)
               url("./assets/industry-profile.png")
-              center center / 80% 80%
+              center center / 80% 60%
               no-repeat;
 }
 
@@ -337,6 +350,7 @@ a:active {
     width: 100%;
     height: 100%;
 }
+
 .tint-background {
   width: 100%;
   position: absolute;
@@ -349,7 +363,7 @@ a:active {
   opacity: 0.55;
   position: absolute;
   background: url("./assets/home-intro-background.jpg")
-              130px 70% / 84% 84%
+              center 70% / 84% 84%
               no-repeat
               fixed;
 }
@@ -359,7 +373,7 @@ a:active {
   opacity: 0.45;
   position: absolute;
   background: url("./assets/academia-intro-background.jpg")
-              130px -10px / 78% 77%
+              center 5% / 90% 77%
               no-repeat
               fixed;
 }
@@ -369,11 +383,10 @@ a:active {
   opacity: 0.5;
   position: absolute;
   background: url("./assets/contact-intro-background.jpg")
-              115px -30px / 80% 80%
+              center -40% / 80% 80%
               no-repeat
               fixed;
 }
-
 
 /*********************************** Images ***********************************/
 .intern-01-img-01 {
